Fixed the animation on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1852,23 +1852,23 @@ button:not(:disabled) {
     font-size: 13px;
   }
   .testing, .box {
-    top: 25%;
+    top: 21%;
   }
   .top_con .inner {
     overflow: hidden;
   }
-  .c1 {
-    width: 120px;
-    height: 120px;
+  /* .c1 {
+    width: 230px;
+    height: 230px;
   }
   .c2 {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
   }
-  .c2 {
-    width: 280px;
-    height: 280px;
-  }
+  .c3 {
+    width: 450px;
+    height: 450px;
+  } */
   .footer_links {
     padding: 50px 20px 40px;
     grid-template-columns: repeat(1, 1fr);
